--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li>
+            <a href="./recipes/lasagna.html" target="_blank" rel="nofollow noreferrer">Lasagna</a>
+            <a href="./recipes/butter-cookies.html"></a>
+            <a href="./recipes/butter-cookies.html"></a>
+        </li>
+    </ul>
 </body>
 </html>
