Add another and the last one recipe called rice

--- a/recipes/butter-cookies.html
+++ b/recipes/butter-cookies.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Butter Cookies Recipes</title>
+    <title>Butter Cookies Recipe</title>
 </head>
 <body>
     <h1>Butter Cookies</h1>
