--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <ul>
         <li>
             <a href="./recipes/lasagna.html" target="_blank" rel="nofollow noreferrer">Lasagna</a>
-            <a href="./recipes/butter-cookies.html"></a>
-            <a href="./recipes/butter-cookies.html"></a>
+            <a href="./recipes/butter-cookies.html">Butter cookies</a>
+            <a href="./recipes/rice.html">Rice</a>
         </li>
     </ul>
 </body>
