Add the links correctly to a list in the index

--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li>
-            <a href="./recipes/lasagna.html" target="_blank" rel="nofollow noreferrer">Lasagna</a>
-            <a href="./recipes/butter-cookies.html">Butter cookies</a>
-            <a href="./recipes/rice.html">Rice</a>
-        </li>
+        <li><a href="./recipes/lasagna.html" target="_blank" rel="nofollow noreferrer">Lasagna</a></li>
+        <li><a href="./recipes/butter-cookies.html">Butter cookies</a></li>
+        <li><a href="./recipes/rice.html">Rice</a></li>
     </ul>
 </body>
 </html>
