Adjust the photos of the three recipes

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/lasagna.html" target="_blank" rel="nofollow noreferrer">Lasagna</a></li>
-        <li><a href="./recipes/butter-cookies.html">Butter cookies</a></li>
-        <li><a href="./recipes/rice.html">Rice</a></li>
+        <li><a href="./recipes/butter-cookies.html" target="_blank" rel="nofollow noreferrer">Butter cookies</a></li>
+        <li><a href="./recipes/rice.html" target="_blank" rel="nofollow noreferrer">Rice</a></li>
     </ul>
 </body>
 </html>
