--- a/recipes/butter-cookies.html
+++ b/recipes/butter-cookies.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Butter Cookies</h1>
-    <img src="../images/butter-cookies.jpg" alt="a butter cookies photo">
+    <img src="../images/butter-cookies.jpg" alt="a butter cookies photo" height="500" width="500">
     <p>These peanut butter cookies are deliciously soft and chewy in the middle. They taste great and are easy to make!</p>
     <p>There's nothing like a peanut butter cookie to satisfy your sweet tooth and lift your spirits. This peanut butter cookie recipe will quickly become a 
         family favorite.</p>
