--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="../images/lasagna.webp" alt="a lasagna photo">
+    <img src="../images/lasagna.webp" alt="a lasagna photo" height="500" width="500">
     <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
     <p>When John Chandler submitted this lasagna recipe to Allrecipes more than 20 years ago, he had no idea how successful it would become. 
         One of our top-performing recipes of all time, World's Best Lasagna racks up more than 7 million views per year and has ranked among the most popular 
