--- a/recipes/rice.html
+++ b/recipes/rice.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Rice</h1>
-    <img src="../images/rice.jpg" alt="a rice photo">
+    <img src="../images/rice.webp" alt="a rice photo" height="500" width="500">
     <p>Learn how to make white rice with perfect flavor. It's simple and easy, yet tasty. Being Puerto Rican, I love rice!</p>
     <h2>Ingredients</h2>
     <ul>
