add classes to the elements in the html files and add a stylesheet

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./style.css">
     <title>Recipes</title>
 </head>
-<body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/lasagna.html" target="_blank" rel="nofollow noreferrer">Lasagna</a></li>
-        <li><a href="./recipes/butter-cookies.html" target="_blank" rel="nofollow noreferrer">Butter cookies</a></li>
-        <li><a href="./recipes/rice.html" target="_blank" rel="nofollow noreferrer">Rice</a></li>
+<body class="index">
+    <p class="title">ODIN RECIPES</p>
+    <ul class="list-recipes">
+        <li class="recipe"><a href="./recipes/lasagna.html" target="_blank" rel="nofollow noreferrer">Lasagna</a></li>
+        <li class="recipe"><a href="./recipes/butter-cookies.html" target="_blank" rel="nofollow noreferrer">Butter cookies</a></li>
+        <li class="recipe"><a href="./recipes/rice.html" target="_blank" rel="nofollow noreferrer">Rice</a></li>
     </ul>
 </body>
 </html>
