--- a/recipes/rice.html
+++ b/recipes/rice.html
@@ -2,26 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../style.css">
     <title>Rice Recipe</title>
 </head>
-<body>
-    <h1>Rice</h1>
-    <img src="../images/rice.webp" alt="a rice photo" height="500" width="500">
-    <p>Learn how to make white rice with perfect flavor. It's simple and easy, yet tasty. Being Puerto Rican, I love rice!</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>1 tablespoon canola oil</li>
-        <li>2 cups white rice</li>
-        <li>1/4 teaspoon garlic powder (Optional)</li>
-        <li>Salt to taste</li>
-        <li>2 cups boiling water</li>
+<body class="rice">
+    <p class="title">Rice</p>
+    <img src="../images/rice.webp" alt="a rice photo" class="photo">
+    <p class="paragraph">Learn how to make white rice with perfect flavor. It's simple and easy, yet tasty. Being Puerto Rican, I love rice!</p>
+    <p class="subtitle">Ingredients</p>
+    <ul class="lists">
+        <li class="elements">1 tablespoon canola oil</li>
+        <li class="elements">2 cups white rice</li>
+        <li class="elements">1/4 teaspoon garlic powder (Optional)</li>
+        <li class="elements">Salt to taste</li>
+        <li class="elements">2 cups boiling water</li>
     </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Heat oil in a large saucepan over medium heat.</li>
-        <li>Add rice, garlic powder, and salt.</li>
-        <li>Pour in boiling water to cover rice by about 1 inch; bring to a boil.</li>
-        <li>Reduce heat to low, cover, and simmer until water is absorbed and rice is tender, 20 to 30 minutes.</li>
+    <p class="subtitle">Steps</p>
+    <ol class="lists">
+        <li class="elements">Heat oil in a large saucepan over medium heat.</li>
+        <li class="elements">Add rice, garlic powder, and salt.</li>
+        <li class="elements">Pour in boiling water to cover rice by about 1 inch; bring to a boil.</li>
+        <li class="elements">Reduce heat to low, cover, and simmer until water is absorbed and rice is tender, 20 to 30 minutes.</li>
     </ol>
 </body>
 </html>
