Modify some things in the css using the knowledge of the box model

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <title>Recipes</title>
 </head>
 <body class="index">
-    <p class="title">ODIN RECIPES</p>
-    <ul class="list-recipes">
-        <li class="recipe"><a href="./recipes/lasagna.html" target="_blank" rel="nofollow noreferrer">Lasagna</a></li>
-        <li class="recipe"><a href="./recipes/butter-cookies.html" target="_blank" rel="nofollow noreferrer">Butter cookies</a></li>
-        <li class="recipe"><a href="./recipes/rice.html" target="_blank" rel="nofollow noreferrer">Rice</a></li>
-    </ul>
+    <div class="card">
+        <p class="title">ODIN RECIPES</p>
+        <ul class="list-recipes">
+            <li class="recipe"><a href="./recipes/lasagna.html" target="_blank" rel="nofollow noreferrer">Lasagna</a></li>
+            <li class="recipe"><a href="./recipes/butter-cookies.html" target="_blank" rel="nofollow noreferrer">Butter cookies</a></li>
+            <li class="recipe"><a href="./recipes/rice.html" target="_blank" rel="nofollow noreferrer">Rice</a></li>
+        </ul>
+    </div>
 </body>
 </html>
